# TinyRogue

./: .gitignore  CMakeLists.txt
Assets/Pages/: terrain_editor.lua
Atlas/: CMakeLists.txt
Atlas/Source/Atlas/: Atlas.cpp  Atlas.h
AtlasBuildTool/: CMakeLists.txt
AtlasBuildTool/Source/: CreateAtlas.h  SplitImage.h  main.cpp
Page/: CMakeLists.txt
Page/Source/Page/: Page.h
Scripts/: BuildDebug.bat  CreateAetherLink.py  CreateProjectDebug.bat  PackUntrackAssets.py
Sprite/: CMakeLists.txt
Sprite/Source/Sprite/: Atlas.cpp  Atlas.h  Quad.h  Renderer.h
TerrainEditor/: CMakeLists.txt
TerrainEditor/Source/: ApplicationResource.cpp  AtlasEditor.cpp  EditorLayer.h  EditorPageBehavior.h
Tests/: TestCreateAtlas.bat  TestSplitImage.bat
TinyRogue/: CMakeLists.txt
TinyRogue/Source/: ApplicationResource.h  TerrainEditorLayer.h  TinyRogue.cpp  UpdateLayer.h
TinyRogue/Source/UI/: Page.h
TinyRogue/Source/UI/Loader/: ImageNodeCreator.h
